--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -25,13 +25,92 @@ td, th {
 }
 
 tbody tr:nth-child(2n) {
-  background-color: #eee;
+  background-color: #f5f5f5;
 }
 
 td, th {
   border-bottom: 1px solid #aaa;
 }
 
+td img {
+  float: right;
+  padding-right: 14px;
+}
+
+td:nth-child(1) {width: 300px;}
+td:nth-child(4) {width: 350px;}
+td:nth-child(5) {width: 40px;}
+
 #trash {
   width: 17px;
 }
+
+/* Input styles */
+input[type=text] {
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  background-size: 20px;
+  width: calc(100% - 161px);
+  padding: 12px 18px;
+
+  margin: 8px 0;
+
+  border: 1px solid #eee;
+  border-radius: 2px;
+  outline: none;
+}
+
+#search {
+  background-image: url('/static/img/gray/search_icon.svg');
+  padding: 12px 40px;
+}
+
+input[type=text]:focus {
+  border: 1px solid #ccc;
+}
+
+#submit {
+  height: 43px;
+  width: 75px;
+  box-shadow: none;
+  transition: all 10ms ease;
+}
+
+#submit:hover {
+  box-shadow: none;
+  border: 1px solid #ccc;
+}
+
+
+.custom-file-input {
+  color: transparent;
+}
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input::before {
+  content: 'Select some files';
+  color: black;
+  display: inline-block;
+  background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
+  border: 1px solid #999;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 700;
+  font-size: 10pt;
+}
+.custom-file-input:hover::before {
+  border-color: black;
+}
+.custom-file-input:active {
+  outline: 0;
+}
+.custom-file-input:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9); 
+}
+
