--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,8 +18,6 @@
             {% if current_user.is_anonymous %}
               <a href="{{ url_for('auth.login') }}">Login</a>
             {% else %}
-              {% if current_user.is_admin() %}
-              {% endif %}
               <a href="{{ url_for('auth.logout') }}">Logout</a>
             {% endif %}
           </div>
@@ -39,13 +37,39 @@
                   <p>{{ message }}</p>
                 {% endfor %}
               {% endif%}
-              <img id="close-err" src="/static/img/x_icon.svg" alt="close">
+              <img id="close-err" src="/static/img/gray/x_icon.svg" alt="close">
             </div>
           {% endif %}
         {% endwith %}
         <div id="sidebar">
-          <a href="{{ url_for('dashboard.index') }}">Bonner</a>
-          <a href="{{ url_for('tags.index') }}">Tags</a>
+          <p>
+            <a href="{{ url_for('dashboard.index') }}">
+              <img src="/static/img/white/file_text_icon.svg" alt="">
+              Bonner
+            </a>
+          </p>
+          <p>
+            <a href="{{ url_for('stats.index') }}">
+              <img src="/static/img/white/trending_up_arrow_icon.svg" alt="">
+              Statestik
+            </a>
+          </p>
+          <p>
+            <a href="{{ url_for('tags.index') }}">
+              <img src="/static/img/white/tag_icon.svg" alt="">
+              Tags
+            </a>
+          </p>
+          {% if current_user.is_authenticated %}
+            {% if current_user.is_admin() %}
+            <p>
+              <a href="{{ url_for('admin.index') }}">
+                <img src="/static/img/white/tool_tools_icon.svg" alt="">
+                Configureation
+              </a>
+            </p>
+            {% endif %}
+          {% endif %}
         </div>
         <div id="main">
           {% block content %}{% endblock %}
