--- a/app/templates/dashboard/view.html
+++ b/app/templates/dashboard/view.html
@@ -43,7 +43,7 @@
         <br>
         <p>Brugerdefineret total: {{ form.total(placeholder="Total price", id="price") }}</p>
       </div>
-      <img id="recipt" src="{{ url_for('dashboard.img', id=recipt.id, cool=0) }}" alt="Image of recipt">
+      <img id="recipt" src="{{ url_for('dashboard.img', id=recipt.id, cool=0) }}" alt="">
     </div>
 
     <div id="contols">
