--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -71,3 +71,49 @@ td img {
   float: right;
   padding-right: 10px;
 }
+
+/* Indicator light */
+.indicator-wrapper {
+  pointer-events: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.indicator {
+  border: 5px solid;
+  width: 5px;
+  height: 5px;
+  border-radius: 10px;
+}
+
+/* Context menu */
+.context-menu {
+  position: absolute;
+  text-align: center;
+  background: lightgray;
+  border: 1px solid black;
+}
+
+.context-menu ul {
+  padding: 0px;
+  margin: 0px;
+  min-width: 150px;
+  list-style: none;
+}
+
+.context-menu ul li {
+  padding-bottom: 7px;
+  padding-top: 7px;
+  border: 1px solid black;
+}
+
+.context-menu ul li a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
+.context-menu ul li:hover {
+  background: darkgray;
+}
