--- a/app/templates/tags/tags.html
+++ b/app/templates/tags/tags.html
@@ -11,7 +11,7 @@
       <h3>{{tag.body}}</h3>
       <p>Kvitteringer: {{ uses }}</p>
       <p>Farvekode: <span class="color">#{{ tag.color }}</span></p>
-      <a href="?rem={{ tag.id }}">Fjærn</a>
+      <a href="?rem={{ tag.id }}">Fjern</a>
     </div>
     {% endfor %}
   </div>
