--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -90,7 +90,6 @@ td img {
 /* Context menu */
 .context-menu {
   position: absolute;
-  text-align: center;
   background: lightgray;
   border: 1px solid black;
 }
@@ -111,11 +110,33 @@ td img {
   color: black;
   cursor: pointer;
   width: 100%;
-  padding-bottom: 7px;
-  padding-top: 7px;
+  padding: 7px;
   display: block;
 }
 
 .context-menu ul li:hover {
   background: darkgray;
+}
+
+/*Change password form */
+#popup-form input[type=password], #popup-form input[type=text] {
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  background-size: 20px;
+
+  width: calc(100% - 80px);
+  padding: 12px 40px;
+  margin: 8px 0;
+
+  border: 1px solid #eee;
+  border-radius: 2px;
+  outline: none;
+}
+
+#popup-form input[type=password] {
+  background-image: url('/static/img/gray/lock_security_icon.svg');
+}
+
+#popup-form input[type=submit] {
+  width: 100%;
 }
