--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -274,3 +274,33 @@ select {
   border-radius: 100px;
 
 }
+
+/* Popup form style */
+#popup-form {
+  display: none;
+}
+
+#popup-form #content {
+  position: absolute;
+  z-index: 1400;
+
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+#popup-form #block {
+  background-color: #10101010;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+
+  position: absolute;
+  z-index: 1200;
+}
