--- a/app/static/css/view.css
+++ b/app/static/css/view.css
@@ -6,19 +6,30 @@ img {
   height: auto;
 }
 
+#top {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 40px;
+  padding-bottom: 50px;
+}
+
 #left {
   flex-grow: 1;
   overflow: auto;
-  padding-bottom: 50px;
 }
 
 #recipt {
   border-radius: 7px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  display: block;
 }
 
 h1 {
   padding-bottom: 15px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 #stamp {
@@ -30,12 +41,6 @@ h1 {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-}
-
-#top {
-  display: flex;
-  justify-content: space-between;
-  gap: 40px;
 }
 
 #date-select {
