--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,84 +1,93 @@
 <!doctype html>
 <html>
-    <head>
-      <link rel="stylesheet" href="/static/css/base.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-      {% if title %}
-      <title>{{ title }} - ReciptDB</title>
-      {% else %}
-      <title>Welcome to ReciptDB</title>
-      {% endif %}
-    </head>
-    <body>
-        <div id="navbar">
-          <a href="{{ url_for('dashboard.index') }}">ReciptDB</a> 
-          <div id="wrapper">
-            {% if current_user.is_anonymous %}
-              <a href="{{ url_for('auth.login') }}">Login</a>
-            {% else %}
-              <a href="{{ url_for('auth.logout') }}">Logout</a>
-            {% endif %}
-          </div>
+  <head>
+    <link rel="stylesheet" href="/static/css/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    {% if title %}
+    <title>{{ title }} - ReciptDB</title>
+    {% else %}
+    <title>Welcome to ReciptDB</title>
+    {% endif %}
+  </head>
+  <body>
+    {% if popup_form %}
+      <div id="popup-form">
+        <div id="block"></div>
+        <div id="content">
+          {% block popup %}{% endblock %}
         </div>
+      </div>
+    {% endif %}
 
-        {% with messages = get_flashed_messages() %}
-          {% if messages %}
-            <div class="notifcation {{ 'info' if messages[0].startswith('info') else 'error' }}">
-              {% if messages[0].startswith('info') %}
-                <h3>Information</h3>
-                {% for message in messages %}
-                  <p>{{ message[4:] }}</p>
-                {% endfor %}
-              {% else %}
-                <h3>Error!</h3>
-                {% for message in messages %}
-                  <p>{{ message }}</p>
-                {% endfor %}
-              {% endif%}
-              <img id="close-err" src="/static/img/gray/x_icon.svg" alt="close">
-            </div>
-          {% endif %}
-        {% endwith %}
-
-        {% if current_user.is_authenticated %}
-        <div id="sidebar">
-          <p>
-            <a href="{{ url_for('dashboard.index') }}">
-              <img src="/static/img/white/file_text_icon.svg" alt="">
-              Bonner
-            </a>
-          </p>
-          <p>
-            <a href="{{ url_for('stats.index') }}">
-              <img src="/static/img/white/trending_up_arrow_icon.svg" alt="">
-              Statestik
-            </a>
-          </p>
-          <p>
-            <a href="{{ url_for('tags.index') }}">
-              <img src="/static/img/white/tag_icon.svg" alt="">
-              Tags
-            </a>
-          </p>
-            {% if current_user.is_admin() %}
-            <p>
-              <a href="{{ url_for('admin.index') }}">
-                <img src="/static/img/white/tool_tools_icon.svg" alt="">
-                Configureation
-              </a>
-            </p>
-            {% endif %}
-          <div id="bottom">
-            <img src="/static/img/white/git_commit_icon.svg" alt="">
-            Alpha 0.2
-          </div>
-        </div>
+    <div id="navbar">
+      <a href="{{ url_for('dashboard.index') }}">ReciptDB</a> 
+      <div id="wrapper">
+        {% if current_user.is_anonymous %}
+          <a href="{{ url_for('auth.login') }}">Login</a>
+        {% else %}
+          <a href="{{ url_for('auth.logout') }}">Logout</a>
         {% endif %}
-        <div id="main">
-          {% block content %}{% endblock %}
+      </div>
+    </div>
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <div class="notifcation {{ 'info' if messages[0].startswith('info') else 'error' }}">
+          {% if messages[0].startswith('info') %}
+            <h3>Information</h3>
+            {% for message in messages %}
+              <p>{{ message[4:] }}</p>
+            {% endfor %}
+          {% else %}
+            <h3>Error!</h3>
+            {% for message in messages %}
+              <p>{{ message }}</p>
+            {% endfor %}
+          {% endif%}
+          <img id="close-err" src="/static/img/gray/x_icon.svg" alt="close">
         </div>
-      <script src="/static/js/base.js"></script>
-    </body>
+      {% endif %}
+    {% endwith %}
+
+    {% if current_user.is_authenticated %}
+    <div id="sidebar">
+      <p>
+        <a href="{{ url_for('dashboard.index') }}">
+          <img src="/static/img/white/file_text_icon.svg" alt="">
+          Bonner
+        </a>
+      </p>
+      <p>
+        <a href="{{ url_for('stats.index') }}">
+          <img src="/static/img/white/trending_up_arrow_icon.svg" alt="">
+          Statestik
+        </a>
+      </p>
+      <p>
+        <a href="{{ url_for('tags.index') }}">
+          <img src="/static/img/white/tag_icon.svg" alt="">
+          Tags
+        </a>
+      </p>
+        {% if current_user.is_admin() %}
+        <p>
+          <a href="{{ url_for('admin.index') }}">
+            <img src="/static/img/white/tool_tools_icon.svg" alt="">
+            Configureation
+          </a>
+        </p>
+        {% endif %}
+      <div id="bottom">
+        <img src="/static/img/white/git_commit_icon.svg" alt="">
+        Alpha 0.2
+      </div>
+    </div>
+    {% endif %}
+    <div id="main">
+      {% block content %}{% endblock %}
+    </div>
+  <script src="/static/js/base.js"></script>
+  </body>
 </html>
