--- a/app/templates/dashboard/share.html
+++ b/app/templates/dashboard/share.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <link rel="stylesheet" href="/static/css/index.css">
+  <link rel="stylesheet" href="/static/css/view.css">
   <div class="header"></div>
-  <h2>Share jo mam</h2>
+  {% with recipt = share.recipt %}
+    <h2>{{ recipt.store }}</h2>
+    <img id="recipt" src="{{ url_for('dashboard.img', id=recipt.id, share=share.code) }}" alt="">
+  {% endwith %}
 
 {% endblock %}
