--- a/app/templates/dashboard/view.html
+++ b/app/templates/dashboard/view.html
@@ -9,7 +9,7 @@
     <div id="top">
       <div id="left">
         <div id="store-head">
-          <h1>{{ recipt.store }}</h1>
+          <h1>{{ recipt.store }} <a href="{{ link }}" target="_blank"><img src="/static/img/gray/share_icon.svg" alt="big nono"></a></h1>
           {{ form.timestamp(placeholder="MM/DD/YY HH:MM:SS", id="date-select") }}
           {% for error in form.timestamp.errors %}
             <br><span class="err">*{{ error }}</span>
