Update style / readme with env fix

--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -160,7 +160,8 @@ td img {
 
 #info-row .card {
   position: relative;
-  width: 200px;
+  flex: 1;
+  min-width: 200px;
   height: 220px;
   padding: 30px;
   padding-top: 105px;
